force-app/main/default/objects/Affl_Mappings__c/fields/Auto_Program_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Program_Enrollment_Status__c</fullName>
    <label>Auto Enrollment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>