force-app/main/default/objects/Affl_Mappings__c/fields/Primary_Affl_Field__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affl_Field__c</fullName>
    <description>The label of the lookup field in Contact that points to the primary Account of the specified Record Type.</description>
    <inlineHelpText>The label of the lookup field in Contact that points to the primary Account of the specified Record Type.</inlineHelpText>
    <label>Primary Affl Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>